tests/bits-param/duplicate-param-2.stderr
error: encountered duplicate `bits` parameter: duplicate set to 32
 --> tests/bits-param/duplicate-param-2.rs:3:23
  |
3 | #[bitfield(bits = 32, bits = 16)]
  |                       ^^^^^^^^^

error: previous `bits` parameter here
 --> tests/bits-param/duplicate-param-2.rs:3:12
  |
3 | #[bitfield(bits = 32, bits = 16)]
  |            ^^^^^^^^^
